// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MerkleTree > keccak256 with sort leaves and sort pairs option 1`] = `"0x9788fdf3a3365b8b0871ea3dd057e0eb3bbde4c15a7112bcae7c51030d6c0729"`;

exports[`MerkleTree > keccak256 with sort option 1`] = `"0x9788fdf3a3365b8b0871ea3dd057e0eb3bbde4c15a7112bcae7c51030d6c0729"`;

exports[`MerkleTree > sha256 with keccak256 leaves 1`] = `"0x311d2e46f49b15fff8b746b74ad57f2cc9e0d9939fda94387141a2d3fdf187ae"`;

exports[`MerkleTree > sha256 with keccak256 leaves 2`] = `
[
  "0x3ac225168df54212a25c1c01fd35bebfea408fdac2e31ddd6f80a4bbf9a5f1cb",
  "0xb5553de315e0edf504d9150af82dafa5c4667fa618ed0a6f19c69b41166c5510",
  "0x0b42b6393c1f53060fe3ddbfcd7aadcca894465a5a438f69c87d790b2299b9b2",
]
`;

exports[`MerkleTree > sha256 with keccak256 leaves 3`] = `
[
  [
    "0x3ac225168df54212a25c1c01fd35bebfea408fdac2e31ddd6f80a4bbf9a5f1cb",
    "0xb5553de315e0edf504d9150af82dafa5c4667fa618ed0a6f19c69b41166c5510",
    "0x0b42b6393c1f53060fe3ddbfcd7aadcca894465a5a438f69c87d790b2299b9b2",
  ],
  [
    "0x176f0f307632fdd5831875eb709e2f68d770b102262998b214ddeb3f04164ae1",
    "0x0b42b6393c1f53060fe3ddbfcd7aadcca894465a5a438f69c87d790b2299b9b2",
  ],
  [
    "0x311d2e46f49b15fff8b746b74ad57f2cc9e0d9939fda94387141a2d3fdf187ae",
  ],
]
`;

exports[`MerkleTree > sha256 with keccak256 leaves with duplicate odd option 1`] = `"0xbcdd0f60308db788712205115fe4273bfda49fa0925611fee765a63df9ab96a1"`;

exports[`MerkleTree > sha256 with keccak256 leaves with duplicate odd option 2`] = `
[
  "0x3ac225168df54212a25c1c01fd35bebfea408fdac2e31ddd6f80a4bbf9a5f1cb",
  "0xb5553de315e0edf504d9150af82dafa5c4667fa618ed0a6f19c69b41166c5510",
  "0x0b42b6393c1f53060fe3ddbfcd7aadcca894465a5a438f69c87d790b2299b9b2",
]
`;

exports[`MerkleTree > sha256 with keccak256 leaves with duplicate odd option 3`] = `
[
  [
    "0x3ac225168df54212a25c1c01fd35bebfea408fdac2e31ddd6f80a4bbf9a5f1cb",
    "0xb5553de315e0edf504d9150af82dafa5c4667fa618ed0a6f19c69b41166c5510",
    "0x0b42b6393c1f53060fe3ddbfcd7aadcca894465a5a438f69c87d790b2299b9b2",
  ],
  [
    "0x176f0f307632fdd5831875eb709e2f68d770b102262998b214ddeb3f04164ae1",
    "0x43e061172b1177f25d0f156b2d2ed11728006fade8e167ff3d1b9dbc979a3358",
  ],
  [
    "0xbcdd0f60308db788712205115fe4273bfda49fa0925611fee765a63df9ab96a1",
  ],
]
`;

exports[`MerkleTree > sha256 with sha256 leaves and sort pairs option and duplicate odd option 1`] = `"0xadcf243ef947fcbf3fbf692d7bce9f31f17f3626dc6cce5261991502cc5b2caa"`;

exports[`MerkleTree > sha256 with sort pairs option 1`] = `"0x28168ee78e90a723d85aa5e62b1ad2108e5b58eb1c9aa278189028a33c6647bb"`;
